# web12_dz7

./: config.ini  main.py  pyproject.toml  seed.py
migrations/: env.py  script.py.mako
migrations/versions/: cc790fc67a6f_init.py
src/: db.py  models.py
