[tool.poetry]
name = "dz7"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.16"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
faker = "^18.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
